--- a/support.html
+++ b/support.html
@@ -77,10 +77,10 @@
         </div>
         <div class="links">
             <h1>Useful Links</h1>
-            <a href="" class="link">Shop</a>
-            <a href="" class="link">About</a>
-            <a href="" class="link">Support</a>
-            <a href="" class="link">Contact</a>
+            <a href="index.html" class="link">Shop</a>
+            <a href="about html" class="link">About</a>
+            <a href="support.html" class="link">Support</a>
+            <a href="contact.html" class="link">Contact</a>
         </div>
         <div class="articles">
             <h1>Our Products</h1>
